implements contact page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0f8345c4a02825290d44",
+    "/css/app.css": "/css/app.css?id=783c42c73835154942a3"
 }
